datos de perfil

--- a/ecommerce/panel_usuario.html
+++ b/ecommerce/panel_usuario.html
@@ -27,7 +27,7 @@
                 <div class="field">
                     <label for="apPaternoUser" class="label">Apellido paterno:</label>
                     <p class="control has-icons-left">
-                        <input id="apPaternoUser" class="input" type="text" placeholder="Apellido paterno">
+                        <input id="apPaternoUser" class="input" type="text" placeholder="Apellido paterno" value="">
                         <span class="icon is-small is-left">
                             <i class="fas fa-user"></i>
                         </span>
@@ -36,7 +36,7 @@
                 <div class="field">
                     <label for="apMaternoUser" class="label">Apellido materno:</label>
                     <p class="control has-icons-left">
-                        <input id="apMatenoUser" class="input" type="text" placeholder="Apellido materno">
+                        <input id="apMaternoUser" class="input" type="text" placeholder="Apellido materno" value="">
                         <span class="icon is-small is-left">
                             <i class="fas fa-user"></i>
                         </span>
@@ -47,7 +47,7 @@
                 <div class="field">
                     <label for="mainEmail" class="label">Correo:</label>
                     <p class="control has-icons-left">
-                        <input id="mainEmail" class="input" type="text" placeholder="Correo">
+                        <input id="mainEmail" class="input" type="text" placeholder="Correo" disabled>
                         <span class="icon is-small is-left">
                             <i class="fa fa-envelope"></i>
                         </span>
@@ -86,7 +86,7 @@
         
         
         <div class="size12 trans-0-4 m-t-10 m-b-10 m-r-10">
-          <a class="button is-primary" id="actualizazUser" name="button">Actualizar</a>
+          <a class="button is-primary" id="updateUser" name="button">Actualizar</a>
         </div>
       </form>
     </div>
