--- a/dashboardadmin/productos.html
+++ b/dashboardadmin/productos.html
@@ -80,12 +80,12 @@
     </div>
 </div>
 
-<!-- Modal EditUser --> 
+<!-- Modal EditProduct --> 
 <div id="modalEditProduct" class="modal modal-fx-fadeInScale">  
     <div class="modal-background"></div>  
     <div class="modal-card">
         <header class="modal-card-head">
-            <p class="modal-card-title">Modificar Usuario</p>
+            <p class="modal-card-title">Modificar Producto</p>
             <button class="delete colorPink" aria-label="close"></button>
         </header>
         <section class="modal-card-body">
