password default en perfil

--- a/ecommerce/panel_usuario.html
+++ b/ecommerce/panel_usuario.html
@@ -65,7 +65,7 @@
                 <div class="field">
                     <label for="passwordUser" class="label">Contraseña:</label>
                     <p class="control has-icons-left">
-                        <input id="passwordUser" class="input" type="password" placeholder="Contraseña">
+                        <input id="passwordUser" class="input" type="password" placeholder="Contraseña" value="••••••••">
                         <span class="icon is-small is-left">
                             <i class="fas fa-lock"></i>
                         </span>
@@ -74,7 +74,7 @@
                 <div class="field">
                     <label for="cPasswordUser" class="label">Confirmar Contraseña:</label>
                     <p class="control has-icons-left">
-                        <input id="cPasswordUser" class="input" type="password" placeholder="Contraseña">
+                        <input id="cPasswordUser" class="input" type="password" placeholder="Contraseña" value="••••••••">
                         <span class="icon is-small is-left">
                             <i class="fas fa-lock"></i>
                         </span>
