--- a/ecommerce/panel_usuario.html
+++ b/ecommerce/panel_usuario.html
@@ -1,5 +1,5 @@
 
-<div class="seccion">
+<div class="seccion" style="height: 50vh;">
     <div class="tabs"><!--class="tablinks"-->
       <!--<button class="tablinks" onclick="openCity(event, 'London')">London</button>
       <button class="tablinks" onclick="openCity(event, 'Paris')">Paris</button>
