obtener todos los productos

--- a/dashboardadmin/productos.html
+++ b/dashboardadmin/productos.html
@@ -16,7 +16,7 @@
         <div class="control select  is-info">
             <!--select  multiple size="8"-->
             <select id="searchCategory" name="searchCategory">
-                <option value="-1">Seleccione Categoría</option>
+                <option value="-1">Todos</option>
             </select>
         </div>
     </div>
