habilitar o deshabilitar select subcategoria

--- a/dashboardadmin/productos.html
+++ b/dashboardadmin/productos.html
@@ -24,7 +24,7 @@
         <label class="label" for="searchSubCategory">Subategoría: </label>
         <div class="control select  is-info">
             <!--select  multiple size="8"-->
-            <select id="searchSubCategory" class="searchSubCategory">
+            <select id="searchSubCategory" class="searchSubCategory" disabled>
                 <option value="-1">Selecciona Subcategoría</option>
             </select>
             </div>
