--- a/ecommerce/index.html
+++ b/ecommerce/index.html
@@ -85,7 +85,7 @@
                   </a> -->
                 </div>
             </div>
-            <div class="level-item">
+            <div class="level-item" id="carrito">
                 <a>
                     <span class="icon">
                         <i class="fas fa-shopping-cart fa-lg"></i>
