fix getCarrito and set number of products

--- a/ecommerce/index.html
+++ b/ecommerce/index.html
@@ -78,17 +78,13 @@
                     <p class="control">
                         <button class="button is-white"><i class="fas fa-user-circle fa-lg"></i></button>
                     </p>
-                  <!-- <a>
-                    <span class="icon">
-                        <i class="fas fa-user-circle fa-lg"></i>
-                    </span>
-                  </a> -->
                 </div>
             </div>
-            <div class="level-item" id="carrito">
-                <a>
+            <div class="level-item shopping-item" id="carrito">
+                <a style="box-sizing: border-box;">
                     <span class="icon">
                         <i class="fas fa-shopping-cart fa-lg"></i>
+                        <span id="product-count" class="product-count" id="cantArt"></span>
                     </span>
                 </a>
             </div>
