fix: mostrar recuperar contraseña

--- a/ecommerce/signIn.html
+++ b/ecommerce/signIn.html
@@ -13,7 +13,7 @@
                     </p>
                 </div>
                 <div class="has-text-centered">
-                    <p id="messageEmail" style="visibility: hidden" class="help">Se enviara un mail a su correo electrónico de recuperación con la nueva contraseña. <strong>La contraseña anterior se borrará</strong></p>
+                    <p id="messageEmail" style="display: none" class="help">Se enviara un mail a su correo electrónico de recuperación con la nueva contraseña. <strong>La contraseña anterior se borrará</strong></p>
                 </div>
                 <br>
 				<div id="pwdContainer" class="field">
@@ -37,7 +37,7 @@
 					</button>
                 </p>
                 <p class="buttons">
-                	<button class="button is-danger is-fullwidth" id="getBack" style="visibility: hidden">
+                	<button class="button is-danger is-fullwidth" id="getBack" style="display: none">
 					    <span>Cancelar</span>
 					</button>
                 </p>        
