logIn dasboardadmin responsivo

--- a/dashboardadmin/index.html
+++ b/dashboardadmin/index.html
@@ -43,7 +43,7 @@
                 </div>
                 <!-- Form para LogIn -->
                 <form novalidate="" class="column is-4 is-offset-4">
-                    <div class="column is-8 is-offset-2">
+                    <div class="column is-12">
                         <div class="has-text-centered">
                             <p id="messageEmail" style="visibility: hidden" class="help">Se enviara un mail a su correo electrónico de recuperación con la nueva contraseña. <strong>La contraseña anterior se borrará</strong></p>
                         </div>
