--- a/ecommerce/custom_products.html
+++ b/ecommerce/custom_products.html
@@ -162,7 +162,9 @@
         <div class="columns">
           <div class="column is-half">
             <!--style="max-width: 35%; position: absolute;" style="position: relative; display: inline-block;"-->
-            <div id="container" class="image-canvas"></div>      
+            <div class="image-canvas">
+              <div id="container"></div>
+            </div>
           </div>
           <div class="column is-half">
               <div class="table-container contenedor">
@@ -234,6 +236,7 @@
       </div>
       <div class="step-content has-text-centered">
         <h1 class="title is-4 Tit_custom">¡Listo se ha agregado tu producto al carrito!</h1>
+        <button id="enviar-foto">Enviar foto</button>
       </div>
     </div>
     <div class="steps-actions">
