--- a/ecommerce/custom_products.html
+++ b/ecommerce/custom_products.html
@@ -85,16 +85,11 @@
         
       </div>
       <div class="step-content has-text-centered Tit_custom">
-          <p>Previsualiza el resultado</p>
-          <!--<div style="display: inline-flex;">
-              <div style="max-width: 350px; " class="image-container" id="editor"></div>
-              <canvas style="max-width: 350px;" class="image-container" id="preview"></canvas>
-          </div>-->  
           <div class="columns is-centered">
             <div class="column is-half">
               <h3>Área de trabajo</h3>
               <div>
-                <div class="image-canvas" style="overflow: scroll;" id="editor"></div>
+                <div class="image-canvas" style="overflow: auto;" id="editor"></div>
                 
                 <div class="Tit2_custom" style="padding-top: 2%;">
                   <em class="fa fa-exclamation-circle numb_tit2custom "></em>
@@ -163,7 +158,7 @@
           <div class="column is-half">
             <!--style="max-width: 35%; position: absolute;" style="position: relative; display: inline-block;"-->
             <div class="image-canvas">
-              <div id="container"></div>
+              <div id="container" class="image-canvas"></div>
             </div>
           </div>
           <div class="column is-half">
